# breachlet

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .markdownlint.yml  .rustfmt.toml  AGENTS.md  Cargo.toml  LICENSE  README.md  clippy.toml  deny.toml  docker-compose.yml  justfile  typos.toml
apps/server/: Cargo.toml
apps/server/src/: main.rs
config/: default.toml  local.toml
crates/app/: Cargo.toml
crates/app/src/: lib.rs  router.rs  state.rs
crates/app/src/dto/: auth.rs  health.rs  user.rs
crates/app/src/handler/: health.rs  user.rs
crates/app/src/services/: auth_service.rs  user_service.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  constants.rs  error.rs  lib.rs
crates/core/src/config/: server_config.rs
crates/domain/: Cargo.toml  clippy.toml
crates/domain/src/: auth.rs  lib.rs  user.rs
crates/domain/src/auth/: entity.rs  repo.rs  value_object.rs
crates/domain/src/user/: entity.rs  repo.rs
crates/domain/src/value_object/: email.rs
crates/infra/: Cargo.toml
crates/infra/src/config/: server_config.rs
crates/infra/src/models/: auth_model.rs  user_model.rs
crates/infra/src/postgres/: auth_repo.rs  user_repo.rs
crates/interface/frontend/: Cargo.toml
crates/interface/server/: Cargo.toml
crates/interface/server/src/: main.rs
docs/: README.md  definitions.md
docs/contributing/: issue_management.md  version_control.md
infra/postgres/: Dockerfile  postgresql.conf
infra/server/: Dockerfile
infra/terraform/: main.tf  outputs.tf  providers.tf  variables.tf
infra/terraform/environments/dev/: terraform.tfvars
infra/terraform/modules/network/: main.tf  output.tf  variables.tf
infra/terraform/modules/security/: main.tf  variables.tf
justfiles/: dev.just
migrations/: 0001_initial_schema.up.sql  0002_populate_initial_schema.up.sql
scripts/: common.sh  infra-deploy.sh
services/api/: Cargo.toml
services/core/: Cargo.toml
services/core/src/: config.rs  error.rs  lib.rs
services/core/src/config/: db_config.rs
services/infra/: Cargo.toml
services/infra/src/: error.rs
services/infrastructure/: Cargo.toml
services/infrastructure/src/: config.rs  lib.rs  tracing.rs
tools/bruno/breachlet/: workspace.yml
tools/bruno/breachlet/collections/core/: Health.yml  opencollection.yml
tools/bruno/breachlet/collections/core/User/: Get By ID.yml  List Users.yml
tools/bruno/breachlet/collections/core/environments/: Development.yml
