[workspace]
resolver = "3"
members = ["crates/*", "bin/*"]

[workspace.package]
version = "0.1.0"
authors = ["skyeBreach <skyebenson@hotmail.com>"]
description = "Stub"
edition = "2024"
license-file = "LICENSE"
readme = "README.md"
keywords = ["breachlet"]

[workspace.dependencies]
# Web Server Framework
axum = "0.8.9"
tower = "0.5.3"

# Axync Runtime
tokio = "1.52.2"

# Database
sqlx = "0.8.6"

# Serialization
serde = "1.0.228"
serde_json = "1.0.149"

# Error Handling
anyhow = "1.0.102"
thiserror = "2.0.18"

# Logging & Tracing 
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

# Date & Time
chrono = "0.4.44"

# ID Generation
uuid = "1.23.1"

# Internal Crates
breachlet-app = { path = "./crates/app" }
breachlet-core = { path = "./crates/core" }
breachlet-infra = { path = "./crates/infra" }
