[package]
name = "breachlet-app"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license-file.workspace = true
readme.workspace = true
keywords.workspace = true

[dependencies]
axum.workspace = true
breachlet-core.workspace = true
breachlet-domain = { version = "0.1.0", path = "../domain" }
breachlet-infra.workspace = true
garde = { version = "0.22.1", features = ["full"] }
serde = { workspace = true, features = ["derive"] }
sqlx = { workspace = true, features = ["postgres"] }
