[package]
name = "breachlet-domain"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license-file.workspace = true
readme.workspace = true
keywords.workspace = true

[dependencies]
breachlet-core.workspace = true
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
uuid = { workspace = true, features = ["v4"] }
