[package]
name = "breachlet-domain"
version = "0.1.0"
authors.workspace = true
description.workspace = true
edition.workspace = true
license-file.workspace = true
readme.workspace = true
keywords.workspace = true

[dependencies]
anyhow.workspace = true
async-trait = "0.1.89"
axum.workspace = true
breachlet-core.workspace = true
chrono = { workspace = true, features = ["serde"] }
garde = { version = "0.22.1", features = ["full"] }
serde = { workspace = true, features = ["derive"] }
tracing.workspace = true
uuid = { workspace = true, features = ["serde", "v4"] }
