[package]
name = "breachlet-infra"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license-file.workspace = true
readme.workspace = true
keywords.workspace = true

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true, features = ["macros"] }
config = "0.15.22"
dotenvy = "0.15.7"
garde = { version = "0.22.1", features = ["full", "pattern"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true, features = [
    "postgres",
    "runtime-tokio",
    "chrono",
    "derive",
    "uuid",
] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true, features = ["serde", "v4"] }
