[package]
name = "breachlet-infra"
version = "0.1.0"
authors.workspace = true
description.workspace = true
edition.workspace = true
license-file.workspace = true
readme.workspace = true
keywords.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1.89"
axum = { workspace = true, features = ["macros"] }
breachlet-core.workspace = true
breachlet-domain = { version = "0.1.0", path = "../domain" }
config = "0.15.22"
dotenvy = "0.15.7"
garde = { version = "0.22.1", features = ["full", "pattern"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true, features = [
    "postgres",
    "runtime-tokio",
    "chrono",
    "derive",
    "uuid",
] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true, features = ["serde", "v4"] }
