[package]
name = "breachlet-svc-infrastructure"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
axum = { workspace = true, features = ["macros"] }
dotenvy = "0.15.7"
garde = { version = "0.22.1", features = ["full", "pattern"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true, features = [
    "postgres",
    "runtime-tokio",
    "chrono",
    "derive",
    "uuid",
] }
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true, features = ["serde", "v4"] }
